--- a/XamlIslands.Win32/XamlIslands.Win32.vcxproj.filters
+++ b/XamlIslands.Win32/XamlIslands.Win32.vcxproj.filters
@@ -49,4 +49,7 @@
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
+  <ItemGroup>
+    <Manifest Include="app.manifest" />
+  </ItemGroup>
 </Project>
