--- a/XamlIslands.WinForms/packages.config
+++ b/XamlIslands.WinForms/packages.config
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Toolkit.Forms.UI.Controls" version="5.0.0-preview.gb86cb1c4cb" targetFramework="net472" />
-  <package id="Microsoft.Toolkit.Forms.UI.XamlHost" version="5.0.0-preview.gb86cb1c4cb" targetFramework="net472" />
-  <package id="System.Net.Http" version="4.0.0" targetFramework="net472" />
+  <package id="Microsoft.Toolkit.Forms.UI.Controls" version="5.0.1" targetFramework="net472" />
+  <package id="Microsoft.Toolkit.Forms.UI.XamlHost" version="5.0.1" targetFramework="net472" />
+  <package id="System.IO" version="4.3.0" targetFramework="net472" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net472" />
 </packages>
