--- a/DotNetCore.WinForms/DotNetCore.WinForms.csproj
+++ b/DotNetCore.WinForms/DotNetCore.WinForms.csproj
@@ -1,12 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
-
-  <ItemGroup>
-    <FrameworkReference Include="Microsoft.DesktopUI"/>
-  </ItemGroup>
 
 </Project>
